# reo_rs_outdated

./: Cargo.toml  README.md  TODO.md  abstract.txt  api_gen.md  breakdown.md  design.md  more_ideas.md  network.md  notes.md  prev template.txt  protocol_composition.md  putget_question.md  rba_normalizing.md  reo_rs traits and api issues.txt  thesis.md  threadless_with_mem.md  todo msc.txt  token_api_explained.md  token_api_explained2.md  tokens_in_proto.md  types.md  weakening.py
graveyard/: port.rs  reo.rs  reo_simplest_working.rs
graveyard2/: generated.rs  lib.rs  protocols.rs  reo.rs  tests.rs  threadless2.rs
graveyard3/: any_map.rs  primitives.rs  threaded_again.rs  threadless3.rs
graveyard4/: automaton.rs  lib.rs  logic.rs  more_safe.rs  preventative_rba.rs  rba_preprocess.rs
graveyard5/: TODO.md  api.rs  bitfield.rs  primitives.rs  proto.rs  simple.rs
notes/: TODO.md  action.md  api_approaches.md  assumptions.md  big_picture.md  bits_and_trits.md  box vs borrow.txt  caretaker.md  chreo_manifest.md  comparing_solutions.md  constants.md  conundrum.md  deps.md  design_summary.md  eg.c  eg.java  eg.rs  how_to_compile_compiler  id_funkiness.md  idea.txt  lockstepping.md  memory_rep.md  more_ideas.md  movers_cloners_problem.md  operational_formulas.md  proto_threading.md  rba_2_moving.md  rba_normalizing.md  rba_unsilence.md  rba_vs_ca_high_lvl.md  reifying_proto_choice.md  relationships.md  resources.md  talk.txt  thesis_contents.md  thesis_points.md  thesis_shape.md  token_api_explained.md  using_unsafety.md  weaknesses_overview.md
src/: TODO.md  any_map.rs  (+37 more)
(+11 files in other folders)
