[package]
name = "reo_rs"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.1"
# bit-set = "0.5.0"
hashbrown = "0.2.0"
parking_lot = "0.7.1"
# pulse = "0.5.3"
# mio = "0.6.16"
# chashmap = "2.2.2"
# indexmap = "1.0.2"
itertools = "0.8.0"

derive-new = "0.5.6"
rand = "0.6.5"